; ModuleID = '/home/carl/AnghaBench/oss-fuzz/projects/tidy-html5/extr_tidy_fuzzer.c_run_tidy_parser.c'
source_filename = "/home/carl/AnghaBench/oss-fuzz/projects/tidy-html5/extr_tidy_fuzzer.c_run_tidy_parser.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TidyXhtmlOut = common dso_local global i32 0, align 4
@yes = common dso_local global i32 0, align 4
@TidyForceOutput = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @run_tidy_parser(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = call i32 (...) @tidyCreate()
  store i32 %8, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = load i32*, i32** %6, align 8
  %11 = call i64 @tidySetErrorBuffer(i32 %9, i32* %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = call i32 (...) @abort() #3
  unreachable

15:                                               ; preds = %3
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @TidyXhtmlOut, align 4
  %18 = load i32, i32* @yes, align 4
  %19 = call i32 @tidyOptSetBool(i32 %16, i32 %17, i32 %18)
  %20 = load i32, i32* %7, align 4
  %21 = load i32, i32* @TidyForceOutput, align 4
  %22 = load i32, i32* @yes, align 4
  %23 = call i32 @tidyOptSetBool(i32 %20, i32 %21, i32 %22)
  %24 = load i32, i32* %7, align 4
  %25 = load i32*, i32** %4, align 8
  %26 = call i64 @tidyParseBuffer(i32 %24, i32* %25)
  %27 = icmp sge i64 %26, 0
  br i1 %27, label %28, label %40

28:                                               ; preds = %15
  %29 = load i32, i32* %7, align 4
  %30 = call i64 @tidyCleanAndRepair(i32 %29)
  %31 = icmp sge i64 %30, 0
  br i1 %31, label %32, label %40

32:                                               ; preds = %28
  %33 = load i32, i32* %7, align 4
  %34 = call i64 @tidyRunDiagnostics(i32 %33)
  %35 = icmp sge i64 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %32
  %37 = load i32, i32* %7, align 4
  %38 = load i32*, i32** %5, align 8
  %39 = call i32 @tidySaveBuffer(i32 %37, i32* %38)
  br label %40

40:                                               ; preds = %36, %32, %28, %15
  %41 = load i32, i32* %7, align 4
  %42 = call i32 @tidyRelease(i32 %41)
  ret void
}

declare dso_local i32 @tidyCreate(...) #1

declare dso_local i64 @tidySetErrorBuffer(i32, i32*) #1

; Function Attrs: noreturn
declare dso_local i32 @abort(...) #2

declare dso_local i32 @tidyOptSetBool(i32, i32, i32) #1

declare dso_local i64 @tidyParseBuffer(i32, i32*) #1

declare dso_local i64 @tidyCleanAndRepair(i32) #1

declare dso_local i64 @tidyRunDiagnostics(i32) #1

declare dso_local i32 @tidySaveBuffer(i32, i32*) #1

declare dso_local i32 @tidyRelease(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
